add mvn plugin, test