@@ -117,6 +117,22 @@
 <!--					</image>-->
 <!--				</configuration>-->
 <!--			</plugin>-->
+
+			<!--
+				for fixing unit test error:
+				java.base/java.lang.reflect.AccessibleObject.checkCanSetAccessible(AccessibleObject.java:354)
+
+				This argument will open the java.net package to all unnamed modules, which should resolve the InaccessibleObjectException. You can add this argument when running your tests using Maven or Gradle.
+			-->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>3.0.0-M5</version>
+				<configuration>
+					<argLine>--add-opens java.base/java.net=ALL-UNNAMED</argLine>
+				</configuration>
+			</plugin>
+
 		</plugins>
 	</build>
 	<repositories>
